--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,6 @@ wheels/
 .installed.cfg
 *.egg
 
-# Downloaded files
-plasmapy/utils/data/downloads/
-
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -142,5 +139,5 @@ docs/about/_authors.rst
 docs/notebooks/*.md
 
 # Version file
-plasmapy/_version.py
+demo/_version.py
 tags
