--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ setenv =
     COLUMNS = 180
     PIP_INDEX_URL = {env:PIP_INDEX_URL:https://pypi.anaconda.org/scipy-wheels-nightly/simple}
     PIP_EXTRA_INDEX_URL = {env:PIP_EXTRA_INDEX_URL:https://pypi.org/simple}
-    PYTEST_COMMAND = pytest --pyargs plasmapy --durations=25 --showlocals -n=auto --dist=loadfile
+    PYTEST_COMMAND = pytest --pyargs demo --durations=25 --showlocals -n=auto --dist=loadfile
 extras = tests
 deps =
     astropydev: git+https://github.com/astropy/astropy
@@ -27,7 +27,7 @@ deps =
 commands =
     !cov: {env:PYTEST_COMMAND} {posargs} -m 'not slow'
     all: {env:PYTEST_COMMAND} {posargs}
-    cov-all: {env:PYTEST_COMMAND} {posargs} --cov=plasmapy --cov-report=xml --cov-config={toxinidir}{/}pyproject.toml --cov-append --cov-report xml:coverage.xml
+    cov-all: {env:PYTEST_COMMAND} {posargs} --cov=demo --cov-report=xml --cov-config={toxinidir}{/}pyproject.toml --cov-append --cov-report xml:coverage.xml
 description =
     run tests
     astropydev: with the development version of astropy
@@ -112,28 +112,10 @@ basepython = python3.9
 extras = tests
 deps =
     astropy == 5.0.1
-    h5py == 3.3.0
-    ipykernel == 6.6.1
-    ipywidgets == 7.6.5
-    hypothesis == 6.35.1
-    lmfit == 1.0.3
-    matplotlib == 3.5.1
-    mpmath == 1.2.1
-    numba == 0.56.0
-    numpy == 1.21.0
-    pandas == 1.2.0
-    pillow == 9.5.0
     pytest == 6.0.0
     pytest-cov
-    pytest-regressions == 2.3.1
-    requests == 2.27.1
-    scipy == 1.7.0
-    tqdm == 4.60.0
-    voila == 0.3.3
-    wrapt == 1.12.1
-    xarray == 2022.3.0
 setenv =
-    PYTEST_COMMAND = pytest --pyargs plasmapy --durations=25 --showlocals
+    PYTEST_COMMAND = pytest --pyargs demo --durations=25 --showlocals
 
 [testenv:linters]
 deps =
@@ -146,4 +128,4 @@ commands =
 basepython = python3.9
 extras =
 deps =
-commands = python -c 'import plasmapy'
+commands = python -c 'import demo'
