--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,23 +17,8 @@ dynamic = [
 ]
 dependencies = [
   "astropy >= 5.0.1",
-  "h5py >= 3.3.0",
-  "ipykernel >= 6.6.1",
-  "ipywidgets >= 7.6.5",
-  "lmfit >= 1.0.3",
-  "matplotlib >= 3.5.1",
-  "mpmath >= 1.2.1",
-  "numba >= 0.56.0",
   "numpy >= 1.21.0",
-  "packaging >= 22.0",
-  "pandas >= 1.3.0",
-  "pytest >= 7.0.1",
-  "requests >= 2.27.1",
-  "scipy >= 1.7.0",
-  "tqdm >= 4.60.0",
-  "voila >= 0.3.3",
-  "wrapt >= 1.12.1",
-  "xarray >= 2022.3.0",
+  "plasmapy >= 2023.5.1",
 ]
 [project.optional-dependencies]
 docs = [
