--- a/tox.ini
+++ b/tox.ini
@@ -49,7 +49,7 @@ extras = docs
 setenv =
     HOME = {envtmpdir}
 commands =
-    sphinx-build docs docs{/}_build{/}html -W -n --keep-going -b html {posargs}
+    sphinx-build docs/source docs{/}build{/}html -W -n --keep-going -b html {posargs}
     echo "Troubleshooting guide: https://docs.plasmapy.org/en/latest/contributing/doc_guide.html#troubleshooting"
 
 [testenv:build_docs_pins]
