--- a/tox.ini
+++ b/tox.ini
@@ -58,7 +58,7 @@ setenv =
     HOME = {envtmpdir}
     PYDEVD_DISABLE_FILE_VALIDATION=1
 commands =
-    sphinx-build docs docs{/}_build{/}html -W -n --keep-going -b html {posargs}
+    sphinx-build docs/source docs{/}build{/}html -W -n --keep-going -b html {posargs}
     echo "Troubleshooting guide: https://docs.plasmapy.org/en/latest/contributing/doc_guide.html#troubleshooting"
 deps = -r{toxinidir}/requirements.txt
 
