--- a/requirements.txt
+++ b/requirements.txt
@@ -15,13 +15,13 @@ argon2-cffi-bindings==21.2.0
 asteval==0.9.29
     # via lmfit
 astropy==5.3
-    # via plasmapy (setup.py)
+    # via
+    #   demo (pyproject.toml)
+    #   plasmapy
 asttokens==2.2.1
     # via stack-data
 attrs==23.1.0
-    # via
-    #   hypothesis
-    #   jsonschema
+    # via jsonschema
 babel==2.12.1
     # via
     #   jupyterlab-server
@@ -29,9 +29,7 @@ babel==2.12.1
 backcall==0.2.0
     # via ipython
 beautifulsoup4==4.12.2
-    # via
-    #   nbconvert
-    #   sphinx-codeautolink
+    # via nbconvert
 bleach==6.0.0
     # via nbconvert
 cachetools==5.3.1
@@ -70,22 +68,17 @@ distlib==0.3.6
     # via virtualenv
 docutils==0.18.1
     # via
+    #   demo (pyproject.toml)
     #   nbsphinx
-    #   plasmapy (setup.py)
-    #   pybtex-docutils
     #   sphinx
     #   sphinx-rtd-theme
-    #   sphinx-tabs
-    #   sphinxcontrib-bibtex
 entrypoints==0.4
     # via jupyter-client
-execnet==1.9.0
-    # via pytest-xdist
 executing==1.2.0
     # via stack-data
 fastjsonschema==2.17.1
     # via nbformat
-filelock==3.12.0
+filelock==3.12.1
     # via
     #   tox
     #   virtualenv
@@ -94,9 +87,7 @@ fonttools==4.39.4
 future==0.18.3
     # via uncertainties
 h5py==3.8.0
-    # via plasmapy (setup.py)
-hypothesis==6.75.6
-    # via plasmapy (setup.py)
+    # via plasmapy
 identify==2.5.24
     # via pre-commit
 idna==3.4
@@ -112,23 +103,23 @@ iniconfig==2.0.0
 ipykernel==6.23.1
     # via
     #   ipywidgets
-    #   plasmapy (setup.py)
-ipython==8.13.2
+    #   plasmapy
+ipython==8.14.0
     # via
     #   ipykernel
     #   ipywidgets
 ipywidgets==8.0.6
-    # via plasmapy (setup.py)
+    # via plasmapy
 jedi==0.18.2
     # via ipython
 jinja2==3.1.2
     # via
+    #   demo (pyproject.toml)
     #   jupyter-server
     #   jupyterlab-server
     #   nbconvert
     #   nbsphinx
     #   numpydoc
-    #   plasmapy (setup.py)
     #   sphinx
     #   towncrier
 json5==0.9.14
@@ -164,18 +155,16 @@ jupyterlab-widgets==3.0.7
     # via ipywidgets
 kiwisolver==1.4.4
     # via matplotlib
-latexcodec==2.0.1
-    # via pybtex
-llvmlite==0.40.0
+llvmlite==0.40.1rc1
     # via numba
 lmfit==1.2.1
-    # via plasmapy (setup.py)
-markupsafe==2.1.2
+    # via plasmapy
+markupsafe==2.1.3
     # via
     #   jinja2
     #   nbconvert
 matplotlib==3.7.1
-    # via plasmapy (setup.py)
+    # via plasmapy
 matplotlib-inline==0.1.6
     # via
     #   ipykernel
@@ -183,7 +172,7 @@ matplotlib-inline==0.1.6
 mistune==2.0.5
     # via nbconvert
 mpmath==1.3.0
-    # via plasmapy (setup.py)
+    # via plasmapy
 nbclient==0.7.4
     # via
     #   nbconvert
@@ -193,14 +182,14 @@ nbconvert==7.4.0
     #   jupyter-server
     #   nbsphinx
     #   voila
-nbformat==5.8.0
+nbformat==5.9.0
     # via
     #   jupyter-server
     #   nbclient
     #   nbconvert
     #   nbsphinx
 nbsphinx==0.9.2
-    # via plasmapy (setup.py)
+    # via demo (pyproject.toml)
 nest-asyncio==1.5.6
     # via
     #   ipykernel
@@ -208,22 +197,23 @@ nest-asyncio==1.5.6
 nodeenv==1.8.0
     # via pre-commit
 numba==0.57.0
-    # via plasmapy (setup.py)
+    # via plasmapy
 numpy==1.24.3
     # via
     #   astropy
     #   contourpy
+    #   demo (pyproject.toml)
     #   h5py
     #   lmfit
     #   matplotlib
     #   numba
     #   pandas
-    #   plasmapy (setup.py)
+    #   plasmapy
     #   pyerfa
     #   scipy
     #   xarray
 numpydoc==1.5.0
-    # via plasmapy (setup.py)
+    # via demo (pyproject.toml)
 packaging==23.1
     # via
     #   astropy
@@ -232,15 +222,15 @@ packaging==23.1
     #   jupyterlab-server
     #   matplotlib
     #   nbconvert
-    #   plasmapy (setup.py)
+    #   plasmapy
     #   pyproject-api
     #   pytest
     #   sphinx
     #   tox
     #   xarray
-pandas==2.0.1
+pandas==2.0.2
     # via
-    #   plasmapy (setup.py)
+    #   plasmapy
     #   xarray
 pandocfilters==1.5.0
     # via nbconvert
@@ -252,9 +242,11 @@ pickleshare==0.7.5
     # via ipython
 pillow==9.5.0
     # via
+    #   demo (pyproject.toml)
     #   matplotlib
-    #   plasmapy (setup.py)
-platformdirs==3.5.1
+plasmapy==2023.5.1
+    # via demo (pyproject.toml)
+platformdirs==3.5.3
     # via
     #   jupyter-core
     #   tox
@@ -264,7 +256,7 @@ pluggy==1.0.0
     #   pytest
     #   tox
 pre-commit==3.3.2
-    # via plasmapy (setup.py)
+    # via demo (pyproject.toml)
 prometheus-client==0.17.0
     # via jupyter-server
 prompt-toolkit==3.0.38
@@ -277,23 +269,16 @@ ptyprocess==0.7.0
     #   terminado
 pure-eval==0.2.2
     # via stack-data
-pybtex==0.24.0
-    # via
-    #   pybtex-docutils
-    #   sphinxcontrib-bibtex
-pybtex-docutils==1.0.2
-    # via sphinxcontrib-bibtex
 pycparser==2.21
     # via cffi
 pyerfa==2.0.0.3
     # via astropy
 pygments==2.15.1
     # via
+    #   demo (pyproject.toml)
     #   ipython
     #   nbconvert
-    #   plasmapy (setup.py)
     #   sphinx
-    #   sphinx-tabs
 pyparsing==3.0.9
     # via matplotlib
 pyproject-api==1.5.1
@@ -301,17 +286,7 @@ pyproject-api==1.5.1
 pyrsistent==0.19.3
     # via jsonschema
 pytest==7.3.1
-    # via
-    #   plasmapy (setup.py)
-    #   pytest-datadir
-    #   pytest-regressions
-    #   pytest-xdist
-pytest-datadir==1.4.1
-    # via pytest-regressions
-pytest-regressions==2.4.2
-    # via plasmapy (setup.py)
-pytest-xdist==3.3.1
-    # via plasmapy (setup.py)
+    # via plasmapy
 python-dateutil==2.8.2
     # via
     #   jupyter-client
@@ -323,8 +298,6 @@ pyyaml==6.0
     # via
     #   astropy
     #   pre-commit
-    #   pybtex
-    #   pytest-regressions
 pyzmq==25.1.0
     # via
     #   ipykernel
@@ -333,78 +306,45 @@ pyzmq==25.1.0
 requests==2.31.0
     # via
     #   jupyterlab-server
-    #   plasmapy (setup.py)
+    #   plasmapy
     #   sphinx
 scipy==1.10.1
     # via
     #   lmfit
-    #   plasmapy (setup.py)
+    #   plasmapy
 send2trash==1.8.2
     # via jupyter-server
 six==1.16.0
     # via
     #   asttokens
     #   bleach
-    #   latexcodec
-    #   pybtex
     #   python-dateutil
 sniffio==1.3.0
     # via anyio
 snowballstemmer==2.2.0
     # via sphinx
-sortedcontainers==2.4.0
-    # via hypothesis
 soupsieve==2.4.1
     # via beautifulsoup4
 sphinx==6.2.1
     # via
+    #   demo (pyproject.toml)
     #   nbsphinx
     #   numpydoc
-    #   plasmapy (setup.py)
     #   sphinx-changelog
-    #   sphinx-codeautolink
-    #   sphinx-copybutton
-    #   sphinx-gallery
-    #   sphinx-hoverxref
-    #   sphinx-issues
-    #   sphinx-notfound-page
-    #   sphinx-reredirects
     #   sphinx-rtd-theme
-    #   sphinx-tabs
-    #   sphinxcontrib-bibtex
     #   sphinxcontrib-jquery
 sphinx-changelog==1.3.0
-    # via plasmapy (setup.py)
-sphinx-codeautolink==0.15.0
-    # via plasmapy (setup.py)
-sphinx-copybutton==0.5.2
-    # via plasmapy (setup.py)
-sphinx-gallery==0.13.0
-    # via plasmapy (setup.py)
-sphinx-hoverxref==1.3.0
-    # via plasmapy (setup.py)
-sphinx-issues==3.0.1
-    # via plasmapy (setup.py)
-sphinx-notfound-page==0.8.3
-    # via plasmapy (setup.py)
-sphinx-reredirects==0.1.2
-    # via plasmapy (setup.py)
-sphinx-rtd-theme==1.2.1
-    # via plasmapy (setup.py)
-sphinx-tabs==3.4.1
-    # via plasmapy (setup.py)
+    # via demo (pyproject.toml)
+sphinx-rtd-theme==1.2.2
+    # via demo (pyproject.toml)
 sphinxcontrib-applehelp==1.0.4
     # via sphinx
-sphinxcontrib-bibtex==2.5.0
-    # via plasmapy (setup.py)
 sphinxcontrib-devhelp==1.0.2
     # via sphinx
 sphinxcontrib-htmlhelp==2.0.1
     # via sphinx
 sphinxcontrib-jquery==4.1
-    # via
-    #   sphinx-hoverxref
-    #   sphinx-rtd-theme
+    # via sphinx-rtd-theme
 sphinxcontrib-jsmath==1.0.1
     # via sphinx
 sphinxcontrib-qthelp==1.0.3
@@ -418,7 +358,7 @@ terminado==0.17.1
 tinycss2==1.2.1
     # via nbconvert
 tomli==2.0.1
-    # via plasmapy (setup.py)
+    # via demo (pyproject.toml)
 tornado==6.3.2
     # via
     #   ipykernel
@@ -427,12 +367,12 @@ tornado==6.3.2
     #   terminado
 towncrier==22.12.0
     # via
-    #   plasmapy (setup.py)
+    #   demo (pyproject.toml)
     #   sphinx-changelog
-tox==4.5.2
-    # via plasmapy (setup.py)
+tox==4.6.0
+    # via demo (pyproject.toml)
 tqdm==4.65.0
-    # via plasmapy (setup.py)
+    # via plasmapy
 traitlets==5.9.0
     # via
     #   comm
@@ -452,30 +392,30 @@ tzdata==2023.3
     # via pandas
 uncertainties==3.1.7
     # via lmfit
-urllib3==2.0.2
+urllib3==2.0.3
     # via requests
 virtualenv==20.23.0
     # via
     #   pre-commit
     #   tox
 voila==0.4.0
-    # via plasmapy (setup.py)
+    # via plasmapy
 wcwidth==0.2.6
     # via prompt-toolkit
 webencodings==0.5.1
     # via
     #   bleach
     #   tinycss2
-websocket-client==1.5.2
+websocket-client==1.5.3
     # via jupyter-server
 websockets==11.0.3
     # via voila
 widgetsnbextension==4.0.7
     # via ipywidgets
 wrapt==1.15.0
-    # via plasmapy (setup.py)
+    # via plasmapy
 xarray==2023.5.0
-    # via plasmapy (setup.py)
+    # via plasmapy
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
