Remove pytest-xdist

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ setenv =
     COLUMNS = 180
     PIP_INDEX_URL = {env:PIP_INDEX_URL:https://pypi.anaconda.org/scipy-wheels-nightly/simple}
     PIP_EXTRA_INDEX_URL = {env:PIP_EXTRA_INDEX_URL:https://pypi.org/simple}
-    PYTEST_COMMAND = pytest --pyargs demo --durations=25 --showlocals -n=auto --dist=loadfile
+    PYTEST_COMMAND = pytest --pyargs demo --durations=25 --showlocals
 extras = tests
 deps =
     astropydev: git+https://github.com/astropy/astropy
