Remove --showlocals flag

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ setenv =
     COLUMNS = 180
     PIP_INDEX_URL = {env:PIP_INDEX_URL:https://pypi.anaconda.org/scipy-wheels-nightly/simple}
     PIP_EXTRA_INDEX_URL = {env:PIP_EXTRA_INDEX_URL:https://pypi.org/simple}
-    PYTEST_COMMAND = pytest --pyargs demo --durations=25 --showlocals
+    PYTEST_COMMAND = pytest --pyargs demo
 extras = tests
 deps =
     astropydev: git+https://github.com/astropy/astropy
@@ -115,7 +115,7 @@ deps =
     pytest == 6.0.0
     pytest-cov
 setenv =
-    PYTEST_COMMAND = pytest --pyargs demo --durations=25 --showlocals
+    PYTEST_COMMAND = pytest --pyargs demo
 
 [testenv:linters]
 deps =
